# darwincode

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.ru.md  SECURITY.md  TODO.md
.darwincode/: README.md  config.json.template  ignore
.darwincode/agents/: schema.toml.template
.darwincode/commands/: schema.toml.template
.darwincode/plans/: architecture-audit.md  implementation-status.md  phase1-critical-fixes.md  phase2-async-migration.md
.darwincode/themes/: custom_template.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build.yml
src/: config.rs  crypto.rs  gemini.rs  main.rs
src/api/: client.rs  client_async.rs  mod.rs  types.rs
src/api/client/: common.rs  gemini.rs  openai.rs
src/app/: actor.rs  agent_picker.rs  chat.rs  command_handler.rs  core.rs  custom.rs  file_ops.rs  mod.rs  model.rs  permission.rs  session.rs  setup.rs  state.rs  theme_picker.rs
src/app/chat/: mod.rs  state.rs  suggestions.rs  todos.rs
src/app/commands/: agents.rs  build.rs  clear.rs  custom.rs  exit.rs  help.rs  history.rs  mod.rs  models.rs  new.rs  permissions.rs  plan.rs  resume.rs  settings.rs  shell.rs  theme.rs  undo.rs  unknown.rs
src/tui/: async_runtime.rs  event_loop.rs  events.rs  keybindings.rs  mod.rs  render.rs  syntax.rs  terminal.rs  theme.rs  tool_executor.rs
src/tui/events/: ask_user.rs  chat.rs  common.rs  mod.rs  models.rs  mouse.rs  permissions.rs  sessions.rs  setup.rs
src/tui/render/: ask_user.rs  chat.rs  (+8 more)
(+23 files in other folders)
