[package]
name = "darwincode"
version = "1.9.68"
edition = "2024"
description = "The open source terminal AI coding agent"
license = "MIT"
readme = "README.md"
repository = "https://github.com/femboypig/darwincode"
keywords = ["tui", "cli", "ai", "agent", "coding"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
crossterm = "0.28.1"
keyring = "2.1"
rand = "0.10.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.11.0"
unicode-width = "0.1.14"
ureq = { version = "2.12.1", features = ["json"] }
